# utf

./: CLAUDE.md  COMPREHENSIVE_ADAPTER_ENHANCEMENT_REPORT.md  Cargo.toml  Coverage.md  JAVASCRIPT_ENHANCEMENT_REPORT.md  README.md  USAGE.md  VALIDATION_REPORT.md  install.sh  readme.md.old  serve-installer.py  test_integration.js  test_sample.js
.github/workflows/: release.yml
docs/: index.html  payment-scnarios.md  refined architechture.md
docs/installation/: INSTALL.md  INSTALLER.md  install.sh
docs/usage/: USAGE.md
examples/: demo_improved_testing.py  sample.js  sample.py  sample.rs  sample_advanced.js  sample_for_test.py  test_template_demo.rs
examples/__tests__/: sample.test.js  sample_advanced.test.js
examples/tests/: test_demo_improved_testing.py  test_sample.py  test_sample.rs  test_sample_for_test.py
integration-tests/: test_integration.integration.test.js
language_configs/: csharp.json  kotlin.json  php.json  swift.json
pipeline_actions/: README.md  validate-configs.sh
pipeline_actions/azure/: azure-pipelines.yml  uft-template.yml
pipeline_actions/github/: action.yml  example-usage.yml  uft.yml
pipeline_actions/gitlab/: .gitlab-ci.yml  (+2 more)
src/: ascii_art.rs  lib.rs
test_output/: test_go_tests._test.go
test_samples/: Calculator.java  Calculator.kt  Calculator.swift  sample.go  sample.js  sample.py  sample.rs
tests/: test_calculatortest.Test.java  test_generated_javascript_tests.test.js  test_generated_python_tests.py
validation_samples/: Calculator.java  calculator.go  calculator.js  calculator.py  calculator.rs  calculator_test.go
(+49 files in other folders)
